fix(sidebar): fix sidebar width & collapse titles

--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -1,11 +1,13 @@
 @import "../../shared/styles/app/variables";
 
 $menu-item-border-width: 3px;
+$layout-sidebar-width: 240px;
+$layout-sidebar-width-collapsed: initial;
 
 nav {
   background-color: $brand-primary-light;
   border-right: 1px solid #ddd;
-  width: $layout-sidebar-width;
+  width: $layout-sidebar-width !important;
   transition: width 0.2s;
 
   ul {
@@ -55,7 +57,7 @@ nav {
   }
 
   &.collapsed {
-    width: $layout-sidebar-width-collapsed;
+    width: $layout-sidebar-width-collapsed !important;
 
     ul > li {
       padding-right: 0;
@@ -76,6 +78,7 @@ nav {
     .toggle-title {
       display: none;
       overflow-x: hidden;
+
       &.showTitle {
         display: inline;
         animation: showTitle 0.1s;
